Fix chat section layout on too narrow devices

--- a/src/dibgram/messenger/messengerWindow.scss
+++ b/src/dibgram/messenger/messengerWindow.scss
@@ -19,6 +19,11 @@
 
             > .nav-animation {
                 flex-grow: 1;
+
+                #chat-list-bar,
+                #chat-container {
+                    min-width: unset;
+                }
             }
         }
     }
