--- a/src/dibgram/messenger/sections/chat/headers/title.scss
+++ b/src/dibgram/messenger/sections/chat/headers/title.scss
@@ -5,6 +5,7 @@
 
     > .back {
         margin: 7px;
+        flex-shrink: 0;
 
         & + .title-bar-left {
             padding-inline-start: 0;
@@ -18,6 +19,7 @@
         user-select: none;
 
         display: flex;
+        overflow: hidden;
 
         .profile-photo {
             flex-shrink: 0;
@@ -32,6 +34,14 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            min-width: 0;
+            white-space: nowrap;
+
+            .title, 
+            .info {
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
 
             .title {
                 font-size: 13px;
